# GitlabHarvester

./: .gitignore  LICENSE  README.md  gitlab_harvester.py  gitlab_services_mts_ru_project_index.jsonl  pyproject.toml
glh/: __init__.py  cli.py  exceptions.py  harvester.py  modes.py  planner.py  session.py
glh/postprocess/: convert.py  dedup.py
glh/utils/: logging_utils.py  terminal_utils.py
scripts/: convert_jsonl_to_json.py  dedup.py
