[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-harvester"
version = "0.2.10"
description = "Build a GitLab instance project index and search repositories for sensitive keywords (API-only, no cloning)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Cur1iosity", email = "cur1iosity@protonmail.com" }
]

keywords = [
  "gitlab",
  "gitlab-api",
  "code-search",
  "secret-scanning",
  "secret-detection",
  "credential-leak",
  "leak-detection",
  "security-audit",
  "devsecops",
  "pentest",
  "red-team",
  "redteam",
  "osint",
  "recon",
  "compliance",
  "cli",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Utilities",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "python-gitlab>=8.0.0",
  "tqdm>=4.66.0",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Cur1iosity/GitlabHarvester"
Repository = "https://github.com/Cur1iosity/GitlabHarvester"
Issues = "https://github.com/Cur1iosity/GitlabHarvester/issues"
Documentation = "https://github.com/Cur1iosity/GitlabHarvester#readme"
Changelog = "https://github.com/Cur1iosity/GitlabHarvester/releases"

[tool.setuptools]
py-modules = ["gitlab_harvester"]

[tool.setuptools.package-data]
glh = ["py.typed"]

[tool.setuptools.packages.find]
include = ["glh*"]

[project.scripts]
gitlab-harvester = "gitlab_harvester:main"